<?xml version="1.0"?>
<package format="3">
  <name>hsr_vision</name>
  <version>0.0.0</version>
  <description>HSR Vision Node for ADA Button Detection</description>
  <maintainer email="your@email.com">andrewsnowdy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>ament_index_python</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
